Fixed Message Renderer

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,2 @@
 provider=com.lindos.spring.hello.HelloMessageProvider
-renderer=com.lindos.spring.hello.ConsoleMessageRender
+renderer=com.lindos.spring.hello.ConsoleMessageRenderer
